--- a/quartos.html
+++ b/quartos.html
@@ -53,7 +53,7 @@
 
 
     <div id="casal" class="tamanho-maximo-container secao-container">
-      <h2>Quarto de casal</h2>
+      <h2>Quartos de casal</h2>
       <p>Conheça nossos quartos de casal.</p>
     </div>
 
@@ -77,7 +77,7 @@
     </div>
 
     <div id="familia" class="tamanho-maximo-container secao-container">
-      <h2>Quarto família</h2>
+      <h2>Quartos para família</h2>
       <p>Conheça nossos quartos família.</p>
     </div>
 
